--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-gzegarraballon.github.io
+<!DOCTYPE html>
+	<html>
+	<head>
+		<title>Interview</title>
+		
+	</head>
+	<body>
+		<h3 style="font-family:Futura">An Interview With Christina</h3>
+		<p style="font-family:Futura">Q: What are your favorite shoes to wear on a daily basis?</p>
+		<p style="font-family:Futura">"My black and white striped Adidas."</p>
+		<p style="font-family:Futura">Q: What is the origin of your name?</p>
+		<p style="font-family:Futura">"It was my dad's turn to name a child and it's a common name in Colombia."</p>
+		<p style="font-family:Futura">Q: If you could only see one color for the rest of your life (besides black and white) what would it be?</p>
+		<p style="font-family:Futura">"Grey. It's my favorite color and I'd still be able to see most of the school."</p>
+		<p style="font-family:Futura">Q: What is your favorite type of sandwich?</p>
+		<p style="font-family:Futura">"One with avocado, toasted challah bread, melted mozarella, arugala, pesto and tomatoes."</p>
+		<p style="font-family:Futura">Q: What would your third genie wish be?</p>
+		<p style="font-family:Futura">"To be able to eat as much food as I can without gaining any weight or having any health problems."</p>
+	</html>
