--- a/interview/Maria.html
+++ b/interview/Maria.html
@@ -6,16 +6,16 @@
 </head>
 <body>
 <h2><center>Maria</h2><br>
-<p>Q:</p>
-<p>A:</p>
-<p>Q:</p>
-<p>A:</p>
-<p>Q:</p>
-<p>A:</p>
-<p>Q:</p>
-<p>A:</p>
-<p>Q:</p>
-<p>A:</p>
+<p>Q: What is your favorite movie?</p>
+<p>A: Deadpool.</p>
+<p>Q: What did you do over the summer? </p>
+<p>A: I mostly stayed at home, except for a few day trips to upstate NY with my family.</p>
+<p>Q: What is your favorite food? </p>
+<p>A: Sushi!</p>
+<p>Q: Why did you choose your major? </p>
+<p>A: I chose communication design because it seems like a stable career within the art field.</p>
+<p>Q: Where would you like to travel to in the near future?</p>
+<p>A: I'd love to visit England, specifically the countryside.</p>
 		
 </body>
 </html>
