--- a/interview/Varun.html
+++ b/interview/Varun.html
@@ -6,16 +6,16 @@
 </head>
 <body>
 <h2><center>Varun</h2><br>
-<p>Q:</p>
-<p>A:</p>
-<p>Q:</p>
-<p>A:</p>
-<p>Q:</p>
-<p>A:</p>
-<p>Q:</p>
-<p>A:</p>
-<p>Q:</p>
-<p>A:</p>
+<p>Q: What is your favorite movie?</p>
+<p>A: I would say Never Back Down or Step Up.</p>
+<p>Q: What did you do over the summer?</p>
+<p>A: Travelled, spent time with my family and friends, ate, partied, slept and worked.</p>
+<p>Q: What is your favorite food?</p>
+<p>A: Italian.</p>
+<p>Q: Why did you choose your major?</p>
+<p>A: I chose communication design because it gave me an outlet to really bring together all the different forms of art I enjoy, hence giving me the opportunity to really create something using all my skills to the max.</p>
+<p>Q: Where would you like to travel to in the near future?</p>
+<p>A: In the near future probably Machu Picchu.</p>
 		
 </body>
 </html>
