--- a/interview/index.html
+++ b/interview/index.html
@@ -11,22 +11,22 @@
 <h4>Student Profiles</h4>
 <ul>
 <div>
-	<li><a href="gzegarraballon.github.io/Yasmeen.html">Yasmeen Alayoub</a> </li>
-	<li><a href="gzegarraballon.github.io/Cristina.html">Cristina Cepeda Thielmann</a></li>
-	<li><a href="gzegarraballon.github.io/Lian.html">Lian Chao</a></li>
-	<li><a href="gzegarraballon.github.io/Muskaan.html">Muskaan Chaudhry</a></li>
-	<li><a href="gzegarraballon.github.io/Carol.html">Carol Chong</a></li>
-	<li><a href="gzegarraballon.github.io/Javarius.html">Javarius Jones</a></li>
-	<li><a href="gzegarraballon.github.io/Anastasia.html">Anastasia Kharchenko</a></li>
-	<li><a href="gzegarraballon.github.io/SHANJIDA.html">Shanjida Kibria</a></li>
-	<li><a href="gzegarraballon.github.io/Christina.html">Christina Murcia</a></li>
-	<li><a href="gzegarraballon.github.io/Demi.html">Demi Straulino</a></li>
-	<li><a href="gzegarraballon.github.io/Varun.html">Varun Vig</a></li>
-	<li><a href="gzegarraballon.github.io/Yifei.html">Yifei Wang</a></li>
-	<li><a href="gzegarraballon.github.io/Kyle.html">Kyle Yu</a></li>
-	<li><a href="gzegarraballon.github.io/Maria.html">Maria Zabolotnaya</a></li>
-	<li><a href="gzegarraballon.github.io/Amanda.html">Amanda Zaldivar</a></li>
-	<li><a href="gzegarraballon.github.io/Gabi.html">Gabriela Zegarra-Ballon</a></li>
+	<li><a href="Yasmeen.html">Yasmeen Alayoub</a></li>
+	<li><a href="Cristina.html">Cristina Cepeda Thielmann</a></li>
+	<li><a href="Lian.html">Lian Chao</a></li>
+	<li><a href="Muskaan.html">Muskaan Chaudhry</a></li>
+	<li><a href="Carol.html">Carol Chong</a></li>
+	<li><a href="Javarius.html">Javarius Jones</a></li>
+	<li><a href="Anastasia.html">Anastasia Kharchenko</a></li>
+	<li><a href="SHANJIDA.html">Shanjida Kibria</a></li>
+	<li><a href="Christina.html">Christina Murcia</a></li>
+	<li><a href="Demi.html">Demi Straulino</a></li>
+	<li><a href="Varun.html">Varun Vig</a></li>
+	<li><a href="Yifei.html">Yifei Wang</a></li>
+	<li><a href="Kyle.html">Kyle Yu</a></li>
+	<li><a href="Maria.html">Maria Zabolotnaya</a></li>
+	<li><a href="Amanda.html">Amanda Zaldivar</a></li>
+	<li><a href="Gabi.html">Gabriela Zegarra-Ballon</a></li>
 	</div>
 </ul>
 
