--- a/interview/index.html
+++ b/interview/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<body style="background-color: #e3e3e4">
+	<body style="background-color: #C38383">
 	<link type="text/CSS" rel="stylesheet" href="stylesheet.css">
 	<title>15 Interviews</title>
 </head>
