--- a/interview/index.html
+++ b/interview/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<body style="background-color: #C38383">
+<head>	
 	<link type="text/CSS" rel="stylesheet" href="stylesheet.css">
 	<title>15 Interviews</title>
 </head>
 <body>
 <h2><center>Creative Computing</h2><br>
 <br>
-<h4>Student Profiles</h4>
+<h4>Student Profiles</h4><br>
 <ul>
 <div>
 	<li><a href="Yasmeen.html">Yasmeen Alayoub</a></li>
