--- a/PSA/Asulam.html
+++ b/PSA/Asulam.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>
-	
+	Warning! According to the classification provided by companies to ECHA in CLP notifications this substance is very toxic to aquatic life and may cause an allergic skin reaction.
 </p>
 </body>
 </html>
