--- a/iteration_1/index.html
+++ b/iteration_1/index.html
@@ -9,8 +9,10 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="element"></div>
-	<div class="element"></div>
-	<div class="element"></div>
+	<div id="pink"></div>
+	<div id="blue"></div>
+	<div id="yellow"></div>
+	<div id="gold"></div>
+	
 </body>
 </html>
