--- a/non-linear-narrative/outline.html
+++ b/non-linear-narrative/outline.html
@@ -2,10 +2,31 @@
 <html>
 <head>
 	<title>Outline</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
 </head>
 <body>
 	<p>
-	
-	</p>
+Wake up at 8:26 instead of 7:45 because my alarm didn't go off. My alarm didn't go off because my phone was dead. My phone was dead because I didn't charge it. I didn't charge it because the outlets are different in Peru and I couldn't find my adapter in the dark. It was dark because there was a power outage as there frequently are. 
+</p>
+<p>
+Once I am awake I put on my shoes and walk outside to the front gate. A bag of bread is sitting right inside the gate. I pick-up the bag and walk to meet my abuelita in the kitchen. She is already awake, squeezing the juice from a pineapple to make juice for lunch. I greet her and walk behind the counter to put water on to boil. Once the water has boiled I pour it into multiple thermoses to save for the rest of the day. I do this because the water in Arequipa is not clean to drink.
+</p>
+<p>
+I walk outside to gather my clothes from the string behind the garden. The plastic clips small dents at the mid-sections of each item. I bring the clothes inside, put them on my bed and begin to fold them. I pick out what I will wear that day. I throw these items on my pillow and turn to th bathroom to take a shower.
+</p>
+<p>
+It is now 9:45 after I have finished showering and getting ready for the day. I walk back downstairs and kiss my abuelita goodbye. I take my keys from the entryway and walk out the front gate, remembering to lock it behind me after the string of burglaries on our street the past week.
+</p>
+<p>
+Down the block a friend waits for me. We pass by the recreation complex, turn left to cross the bridge. Fifteen minutes later we reach the fron of Santa Catalina, we go to buy our tickets and see a sign that the monestary will not open until noon today. We turn around and go to buy crepes across the street. As soon as noon hits, we return to the monestary, purchase our tickets and walk through the first archway which reads "Silencio." 
+</p>
+<p>
+The first part of the monestary is blue, a shade we coined "Santa Catalina Blue." The second part of the monestary is a deep orange-red, a shade we coined "Santa Catalina Red." Each section has cracks and crevices that I rediscover with each visit. Each new visit brings new discoveries as well. My friend and I split up, we each like experiencing the monestary on our own terms. 
+</p>
+<p>
+Brightly colored plants are scattered throughout each of the rooms within the monestary. Trees, flowers, greenery. I am drawn to specific plants that I feel fit within the feeling each room garners from me. A woman turns to me and asks if I can take a picture of her and her husband. She hands me her camera and she and the husband position themselves carfeully in front of a tree filled with pink flowers, the blue acts as a backdrop. As I pass her back her camera, she explains that it is their thirtieth wedding anniversary, she has always wanted to visit Peru. 
+</p>
+<img src="http://www.aroundthisworld.com/uploads/2010/12/IMG_3111.jpg"/>
 </body>
 </html>
