--- a/non-linear-narrative/flowchart.html
+++ b/non-linear-narrative/flowchart.html
@@ -4,6 +4,6 @@
 	<title></title>
 </head>
 <body>
-<img src="file:///Users/gabrielazegarra-ballon/Desktop/FullSizeRender.jpg">
+<a href="http://tinypic.com?ref=2mza8e8" target="_blank"><img src="http://i67.tinypic.com/2mza8e8.jpg" border="0" alt="Image and video hosting by TinyPic"></a>">
 </body>
 </html>
