--- a/non-linear-narrative/outline.html
+++ b/non-linear-narrative/outline.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Outline</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style2.css">
 	<link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
 </head>
 <body>
