--- a/non-linear-narrative/Shower.html
+++ b/non-linear-narrative/Shower.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>Shower</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style3.css">
 	<link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
+	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-<pre style="tab"><p style="font-size:48px;"><a href="Clothes Line.html"> 
+<pre style="tab"><a href="Clothes Line.html"><div><a href="Clothes Line.html"> 
 	shower<br>
 	shower<br>
 	shower<br>
@@ -16,6 +17,6 @@
 	shower<br>
 	shower<br>
 	shower<br>
-</a></p></pre>
+</div></a></pre>
 </body>
 </html>
