--- a/whiteshoes/poem.html
+++ b/whiteshoes/poem.html
@@ -14,7 +14,6 @@
     height: 110px;
   }
 	</style>
-
 </head>
 <body>
 	<center>
@@ -23,7 +22,7 @@
 	<br>
 	<center>
 	<div>
-	Po-em is a textile based onlnine brand. The focus of this brand is to create beautiful, hand-designed textiles. All of their fabrics are block printed using wooden blocks, which are carved by hand. The blocks are then inked and pressed into the fabric, one by one. This ensures that no two bolts of fabric are identical and therefore each item is unique. <br>The designs are created digitally and then converted into files which are printed onto the blocks before they are carved. The colors are each mixed by hand batch by batch, so there are no two shades the exact same either. This brand focuses on individuality and unique items, so that each of their customers recieves a one-of-a-kind piece.  
+	Po-em is a textile based online brand. The focus of this brand is to create beautiful, hand-designed textiles. All of their fabrics are block printed using wooden blocks, which are carved by hand. The blocks are then inked and pressed into the fabric, one by one. This ensures that no two bolts of fabric are identical and therefore each item is unique. <br>The designs are created digitally and then converted into files which are printed onto the blocks before they are carved. The colors are each mixed by hand batch by batch, so there are no two shades the exact same either. This brand focuses on individuality and unique items, so that each of their customers recieves a one-of-a-kind piece.  
 <br><br>
 <a href=”http://po-em.info/”>po-em.info</a>	
 	</div>
