--- a/whiteshoes/index.html
+++ b/whiteshoes/index.html
@@ -15,7 +15,7 @@
 		<td><a href="melis_selections.html"><img src="melis.png"></a></td>
 		<td><a href="mizukis_selections.html"><img src="mizuki.png"></a></td>
 		<td><a href="olivias_selections.html"><img src="olivia.png"></a></td>
-		<td><a href="gabis_selections.html"><img height="650px; width=500px;" src="gabi.png"></a></td>
+		<td><a href="gabis_selections.html"><img src="gabi.png"></a></td>
 	</tr>
 </table>
 <br><br>
