before I go crazy

--- a/whiteshoes/index.html
+++ b/whiteshoes/index.html
@@ -12,10 +12,10 @@
 
 <table width="75%" align="center">
 	<tr>
-		<td><a href="melis_selections.html"><img src="melis.png"></a></td>
-		<td><a href="mizukis_selections.html"><img src="mizuki.png"></a></td>
-		<td><a href="olivias_selections.html"><img src="olivia.png"></a></td>
-		<td><a href="gabis_selections.html"><img src="gabi.png"></a></td>
+		<td><a href="melis_selections.html"><img src="MELIS.png"></a></td>
+		<td><a href="mizukis_selections.html"><img src="MIZUKI.png"></a></td>
+		<td><a href="olivias_selections.html"><img src="OLIVIA.png"></a></td>
+		<td><a href="gabis_selections.html"><img src="GABI.png"></a></td>
 	</tr>
 </table>
 <br><br>
