--- a/whiteshoes/poem.html
+++ b/whiteshoes/poem.html
@@ -27,6 +27,6 @@
 <a href=”http://po-em.info/”>po-em.info</a>	
 	</div>
 	</center>
-	<div id="foo"><a href="gabis_selections.html"><img src="gabi.png" style="width:100px;height:100px;"></a></div>
+	<div id="foo"><a href="gabis_selections.html"><img src="GABI.png" style="width:100px;height:100px;"></a></div>
 </body>
 </html>
