--- a/whiteshoes/sezane.html
+++ b/whiteshoes/sezane.html
@@ -27,6 +27,6 @@
 <a href=”http://www.sezane.com/us”>sezane.com</a>	
 	</div>
 	</center>
-	<div id="foo"><a href="mizukis_selections.html"><img src="mizuki.png" style="width:100px;height:100px;"></a></div>
+	<div id="foo"><a href="mizukis_selections.html"><img src="MIZUKI.png" style="width:100px;height:100px;"></a></div>
 </body>
 </html>
