--- a/whiteshoes/do_istanbul.html
+++ b/whiteshoes/do_istanbul.html
@@ -29,6 +29,6 @@
 <a href=”http://www.doistanbul.co/”>doistanbul.co</a>	
 	</div>
 	</center>
-	<div id="foo"><a href="melis_selections.html"><img src="melis.png" style="width:100px;height:100px;"></a></div>
+	<div id="foo"><a href="melis_selections.html"><img src="MELIS.png" style="width:100px;height:100px;"></a></div>
 </body>
 </html>
