--- a/whiteshoes/mad_bangz.html
+++ b/whiteshoes/mad_bangz.html
@@ -27,6 +27,6 @@
 <a href=”http://www.madbangz.com/index.php?route=common/home”>madbangz.com</a>	
 	</div>
 	</center>
-	<div id="foo"><a href="melis_selections.html"><img src="melis.png" style="width:100px;height:100px;"></a></div>
+	<div id="foo"><a href="melis_selections.html"><img src="MELIS.png" style="width:100px;height:100px;"></a></div>
 </body>
 </html>
