--- a/whiteshoes/moorea_seal.html
+++ b/whiteshoes/moorea_seal.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html> 
 <html>
 <head> 
@@ -27,6 +28,6 @@
 <a href=”https://www.mooreaseal.com/”>mooreaseal.com</a>	
 	</div>
 	</center>
-	<div id="foo"><a href="gabis_selections.html"><img src="gabi.png" style="width:100px;height:100px;"></a></div>
+	<div id="foo"><a href="gabis_selections.html"><img src="GABI.png" style="width:100px;height:100px;"></a></div>
 </body>
 </html>
