--- a/whiteshoes/the_arrivals.html
+++ b/whiteshoes/the_arrivals.html
@@ -26,6 +26,6 @@
 <a href=”https://thearrivals.com/”>thearrivals.com</a>	
 	</div>
 		</center>
-		<div id="foo"><a href="olivias_selections.html"><img src="olivia.png" style="width:100px;height:100px;"></a></div>
+		<div id="foo"><a href="olivias_selections.html"><img src="OLIVIA.png" style="width:100px;height:100px;"></a></div>
 </body>
 </html>
