--- a/whiteshoes/toteme.html
+++ b/whiteshoes/toteme.html
@@ -27,6 +27,6 @@
 <a href=”https://toteme-studio.com/us/”>toteme-studio.com</a>	
 	</div>
 	</center>
-	<div id="foo"><a href="mizukis_selections.html"><img src="mizuki.png" style="width:100px;height:100px;"></a></div>
+	<div id="foo"><a href="mizukis_selections.html"><img src="MIZUKI.png" style="width:100px;height:100px;"></a></div>
 </body>
 </html>
